add bot http request
